[gd_scene load_steps=2 format=3 uid="uid://bc4xt8dbn7w2g"]

[ext_resource type="Script" uid="uid://c46iwhhwjlalb" path="res://_autoloads/sound_manager.gd" id="1_o7edi"]

[node name="SoundManager" type="Node"]
script = ExtResource("1_o7edi")

[node name="SFXPool_1" type="AudioStreamPlayer" parent="."]

[node name="SFXPool_2" type="AudioStreamPlayer" parent="."]

[node name="SFXPool_3" type="AudioStreamPlayer" parent="."]

[node name="SFXPool_4" type="AudioStreamPlayer" parent="."]

[node name="SFXPool_5" type="AudioStreamPlayer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
bus = &"BG"
